Authentication Bugs Fixed

--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,7 @@
     <h3>Welcome user</h3>
     <p id="user_para">Welcome to your Account</p>
     <button id="logout_btn">Logout</button>
-    <button id="verify_btn">Send Email Verification</button>
+    <button id="verify_btn">Verify Email</button>
   </div>
   <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase.js"></script>
 
