--- a/popup.html
+++ b/popup.html
@@ -10,25 +10,25 @@
 <body>
 
   <div id="login_div" class="login-div">
-    <h3>Login Account</h3>
+    <h2>Login Account</h2>
     <input type="email" placeholder="Email" id="email_field"/>
-    <input type="password" placeholder="Password" id="password_field"/>
+    <input type="password" placeholder="Password" id="password_field"/> </br>
 
     <button id=login_btn>Login to Account</button>
-    <h5>Do not have an Account?</h5>
+    <h4>Do not have an Account?</h4>
     <button id="dispsign">Create Account</button>
   </div>
   <div id="signup_div" class="signup-div">
-    <h3>Create Account</h3>
+    <h2>Create Account</h2>
     <input type="email" placeholder="Email" id="email_field_signup"/>
     <input type="password" placeholder="Password" id="password_field_signup"/>
 
     <button id="signup_btn">Create Account</button>
-    <h5>Already have an Account?</h5>
+    <h4>Already have an Account?</h4>
     <button id="displog">Login Account</button>
   </div>
   <div id="welcome_div" class ="welcome-div">
-    <h3>Welcome user</h3>
+    <h2>Welcome user</h2>
     <p id="user_para">Welcome to your Account</p>
     <button id="logout_btn">Logout</button>
     <button id="verify_btn">Verify Email</button>
